# ya-vm-file-server

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose-no-mount-test.yml  docker-compose-test-external.yml  docker-compose.yml  docker_client_external_start.sh  docker_client_start.sh  docker_server_start.sh  input_args.rs  lib.rs  run_test_docker_both.py  run_test_docker_mount.py
core/: error.rs  fcall.rs  lib_utils.rs  serialize.rs  srv.rs
implementation/: mod.rs  unpfs.rs  utils.rs
src/: lib.rs  main.rs
src/core/: attributes_cache.rs  error.rs  fcall.rs  mod.rs  srv.rs
src/implementation/: unpfs.rs  utils.rs
tests/: fs.rs
tests/filesystem-rs/: Cargo.toml
tests/filesystem-rs/src/: lib.rs  os.rs
