[package]
name = "ya-vm-file-server"
version = "0.2.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2021"

[dependencies]
env_logger = {version = "^0.9", optional = true }
log4rs = {version = "^1.0"}
structopt = {version = "^0.3", optional = true}
filetime = "^0.2"
tokio = { version = "^1.10", features = ["full"] }
tokio-stream = { version = "^0.1", features = ["fs"] }
async-trait = "^0.1"
futures = "^0.3"
anyhow = "^1.0"
log = "^0.4"
num-traits = "^0.2"
byteorder = "^1.4"
bitflags = "^1.3"
enum_primitive = "^0.1"
tokio-util = { version = "^0.6", features = ["codec"] }
bytes = "^1.1"

[lib]
name = "ya_vm_file_server"

[features]
build-binary = ["env_logger", "structopt"]

[[bin]]
name = "ya-vm-file-server"
path = "src/main.rs"
required-features = ["build-binary"]

# packages used in integration tests
[dev-dependencies]
filesystem-rs = { path = "tests/filesystem-rs" }
tempdir = "0.3.7"
